<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImageActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:elevation="2dp"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/neilsonlogo" />

        <ImageView
            android:id="@+id/image_taken_preview"
            android:layout_width="124dp"
            android:layout_height="98dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_do_not_disturb_alt_black_24dp" />


        <TextView
            android:id="@+id/name_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/name_header"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="ABBIE TURNER"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/company_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/company_header"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="VHS HYDRAULICS"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phone_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/contact_number_header"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="07880508600"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/email_header"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="ABBIE.NEILSON@NEILSON-HYDRAULICS.CO.UK"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bodytext_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/enter_email_body_header"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <EditText
                android:id="@+id/body_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hello, i would like to get a price and delivery on this part please also im wondring if you have also any of these yes no hello maybe right left up down"
                android:textSize="16sp" />

        </ScrollView>

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:text="@string/send_btn"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/socialmedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:elevation="2dp"
            android:src="@drawable/twitter" />

        <ImageView
            android:id="@+id/linkinin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:elevation="2dp"
            android:src="@drawable/linkined" />

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:elevation="2dp"
            android:src="@drawable/facebook" />

    </LinearLayout>
</LinearLayout>